home nav with large logo bottom alignment fixed

--- a/craft/web/src/styles/layout/__nav.scss
+++ b/craft/web/src/styles/layout/__nav.scss
@@ -1,5 +1,6 @@
 .main-nav {
 	border-bottom: solid 1px rgba($orange, 0.5);
+	// max-height: 81.19px;
 
 	.wrapper {
 		display: flex;
@@ -38,6 +39,7 @@
 		background: $grey;
 		padding: 0 2rem;
 		transform: translateY(40%);
+		margin-top: -2rem;
 
 		img, svg {
 			max-width: 300px;
